# katsu

./: .gitignore  .readthedocs.yaml  BroadcastedPolarimetry.ipynb  CONTRIBUTING.md  FullMuellerExample.ipynb  FullStokesExample.ipynb  InstrumentMuellerPolarimetry.ipynb  LICENSE.md  PolarimeterDesign.pptx  README.md  SCRAPPy_Proposal.docx  mueller.py  paper.bib  paper.md  polarimetry.py  polutils.py  pyproject.toml  seopolarimeter.py  serial_com_agilis.ipynb  setup.cfg  telephoto_afocal.py  test_fullmueller.py  test_fullstokes.py  test_muellerpupil.py  test_pinv_mul.py  ~$PolarimeterDesign.pptx
.github/workflows/: tests.yml
.ipynb_checkpoints/: SEO Snapshot Polarimetry-checkpoint.ipynb
docs/: conf.py  index.rst  katsu.rst  katsu_math.rst  modules.rst  motion.rst  mueller.rst  polarimetry.rst  requirements.txt
docs/notebooks/: AccuracyAndEfficiencyComparingBackends.ipynb  BroadcastedPolarimetry.ipynb  CalibratingPolarimeters.ipynb  CommunityGuidelines.ipynb  DemoAgilisMotion.ipynb  DemoThorlabsMotion.ipynb  DualChannelPolarimetryIntro.ipynb  FullMuellerExample.ipynb  (+11 more)
katsu/: __init__.py  katsu_math.py  motion.py  mueller.py  polarimetry.py
katsu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notes/: state_of_polarization_calibration.md
old/: DemoPropagation.ipynb  FullStokesExample.ipynb  SEO Snapshot Polarimetry.ipynb  mueller.py  plotting.py  polutils.py  telephoto_afocal.py  test_conditionnumber.py  test_fullstokes.py  test_mueller.py  test_muellerpupil  test_polarimeter.py
tests/: test_katsu_math.py  test_motion.py  test_mueller.py  test_polarimetry.py
(+31 files in other folders)
