[project]
name = "katsu"
version = "0.1.0"
description = "Mueller calculus, polarimetry, and motion control"
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE.md"}
authors = [
  {name = "Jaren N. Ashcraft", email = "jashcraft@arizona.edu"},
]

keywords = ["python", "optics", "telescope", "polarization", "mueller", "polarimetry"]
urls = {repository = "https://github.com/jashcraf/katsu", Homepage = "https://katsu.readthedocs.io"}
dependencies = ["numpy", "scipy", "pyserial"]

classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]