[metadata]
name = katsu
author = Jaren N. Ashcraft
author-email = jashcraft@arizona.edu
description = Mueller calculus, polarimetry, and motion control
long-description = file: README.md
license = MIT
platform = any
keywords =
    python
    optics
    telescope
    polarization
    mueller
    polarimetry
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = true
include_package_data = true
packages = katsu
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
    numpy
    scipy
    pyserial